--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'junit:junit:4.13.1'
+	implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.36'
+	implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.3.1'
 	testImplementation 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'junit:junit:4.13.1'
