--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,5 @@ collibra.demo.base.url=http://localhost:8080
 collibra.demo.set.uri=/api/myobject
 collibra.demo.get.uri=/api/myobject/
 collibra.demo.delete.uri=/api/myobject/delete/
+kafka.props=kafka.properties
+kafka.topic=topic_0
